# MyRPGGame

./: .gitignore  .gitmodules  .ninja_log  CMakeCache.txt  CMakeLists.txt  Credits.txt  Dockerfile  Makefile  MyRPGGame.cbp  MyRPGGameAPI.sln  README.md  build.ninja  cmake_install.cmake  compile_command.txt  debug_memory  enlarge_image.py  generate_image.py  generate_img_cpp.cpp  generate_weapon.py  install.sh  linux-compile.sh  macos-compile.sh  main.out  run  run_linux.sh  run_macos.sh  run_windows.ps1  token.txt  valgrind-log.txt  valgrind_command.txt  windows-compile.ps1
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  cpp-linter.yml  linux-build.yml  linux-compile.yml  vulkan.yml  windows-build.yml
MyRPGGame/: .gitignore  Circle.cpp  Circle.hpp  Constants.h  Game.cpp  Game.hpp  GameEntity.cpp  GameEntity.hpp  GameEntityBattle.cpp  GameEntityBattle.hpp  GameEntityMovement.cpp  GameEntityMovement.hpp  GameMap.cpp  GameMap.hpp  Heap.cpp  LandscapeEntity.cpp  LandscapeEntity.hpp  NPCEnemy.cpp  NPCEnemy.hpp  Player.cpp  Player.hpp  Point.cpp  Point.hpp  Projectile.cpp  Projectile.hpp  Weapon.cpp  Weapon.hpp  main  main.cpp  makefile
MyRPGGame.xcodeproj/: project.pbxproj
MyRPGGame.xcodeproj/xcshareddata/xcschemes/: MyRPGGame 1.xcscheme  MyRPGGame.xcscheme
MyRPGGame/animation/: CMakeLists.txt
MyRPGGame/animation/include/: AnimationManager.hpp  TerrainGenerator.hpp  TextureLoader.hpp
MyRPGGame/animation/src/: TerrainGenerator.cpp
MyRPGGame/combat/: CMakeLists.txt
MyRPGGame/combat/include/: GameEntityBattle.hpp
MyRPGGame/common/: CMakeLists.txt
MyRPGGame/common/include/: Constants.h  Graph.hpp  Subject.hpp
MyRPGGame/core/: CMakeLists.txt
MyRPGGame/core/include/: AnimationManager.hpp  CharacterCreationMenu.hpp  Circle.hpp  Collision.hpp  Constants.h  EnemyRepository.hpp  Game.hpp  GameEntity.hpp  GameEntityBattle.hpp  GameEntityMovement.hpp  GameEntityRepository.hpp  GameMap.hpp  GraphVertex.hpp  Heap.hpp  LandscapeEntity.hpp  MainMenu.hpp  Menu.hpp  MenuRepository.hpp  NPCEnemy.hpp  NavigateFiles.hpp  Observer.hpp  Player.hpp  PlayerRepository.hpp  Point.hpp  Projectile.hpp  RigidBody.hpp  RigidBodyDrag.hpp  RigidBodyForceRegistry.hpp  ScriptExecutor.hpp  Subject.hpp  TerrainGenerator.hpp  TextureLoader.hpp  Vector.hpp  Weapon.hpp  generateImg.hpp
MyRPGGame/core/src/: AnimationManager.cpp  CharacterCreationMenu.cpp  Circle.cpp  Collision.cpp  EnemyRepository.cpp  Game.cpp  GameEntity.cpp  GameEntityBattle.cpp  GameEntityMovement.cpp  GameEntityRepository.cpp  GameGraph.cpp  GameMap.cpp  Graph.cpp  Heap.cpp  LandscapeEntity.cpp  MainMenu.cpp  MapEntity.cpp  Menu.cpp  MenuRepository.cpp  NPCEnemy.cpp  NavigateFiles.cpp  Player.cpp  PlayerRepository.cpp  Point.cpp  Projectile.cpp  Queue.cpp  RigidBody.cpp  RigidBodyDrag.cpp  RigidBodyForceRegistry.cpp  RigidBodyGravity.cpp  ScriptExecutor.cpp  Subject.cpp  TerrainGenerator.cpp  TextureLoader.cpp  Vector.cpp  Weapon.cpp  generateImg.cpp  main.cpp
MyRPGGame/entities/: CMakeLists.txt
MyRPGGame/include/: AnimationManager.hpp  Circle.hpp  Collision.h  Collision.hpp  Constants.h  DatabaseConnector.hpp  Edge.hpp  EnemyRepository.hpp  Game.hpp  GameEntity.hpp  GameEntityBattle.hpp  GameEntityMovement.hpp  GameMap.hpp  Graph.hpp  HUD.hpp  Heap.hpp  LandscapeEntity.hpp  MainMenu.hpp  Menu.hpp  MenuRepository.hpp  MovementObserver.hpp  MovementSubject.hpp  NPCEnemy.hpp  Player.hpp  PlayerRepository.hpp  Point.hpp  Projectile.hpp  PythonScriptExecutor.hpp  RigidBody.hpp  RigidBodyDrag.hpp  RigidBodyForceRegistry.hpp  RigidBodyGravity.cpp  RigidBodyGravity.hpp  ScriptExecutor.hpp  TerrainGenerator.hpp  TextureLoader.hpp  TimerThread.hpp  Vector.hpp  Weapon.hpp
MyRPGGame/items/: CMakeLists.txt
MyRPGGame/main/: CMakeLists.txt
MyRPGGame/maps/: CMakeLists.txt
MyRPGGame/menu/: CMakeLists.txt
MyRPGGame/misc/: CMakeLists.txt
MyRPGGame/movement/: CMakeLists.txt
MyRPGGame/physics/: CMakeLists.txt
MyRPGGame/repositories/: CMakeLists.txt
MyRPGGame/repositories/entities/: CMakeLists.txt
MyRPGGame/repositories/entities/include/: EnemyRepository.hpp  GameEntityRepository.hpp
MyRPGGame/repositories/entities/src/: GameEntityRepository.cpp  PlayerRepository.cpp
MyRPGGame/src/: AnimationManager.cpp  Circle.cpp  Collision.cpp  DatabaseConnector.cpp  EnemyRepository.cpp  Game.cpp  GameEntity.cpp  GameEntityBattle.cpp  GameEntityMovement.cpp  GameMap.cpp  Graph.cpp  Heap.cpp  LandscapeEntity.cpp  MainMenu.cpp  Menu.cpp  MenuRepository.cpp  MovementSubject.cpp  NPCEnemy.cpp  Player.cpp  PlayerRepository.cpp  Point.cpp  Projectile.cpp  PythonScriptExecutor.cpp  RigidBody.cpp  RigidBodyForceRegistry.cpp  RigidBodyGravity.cpp  ScriptExecutor.cpp  TerrainGenerator.cpp  TextureLoader.cpp  TimerThread.cpp  Vector.cpp  Weapon.cpp  main.cpp
MyRPGGame/tests/: CMakeLists.txt  DataConnectorTests.cpp  GameGraphTests.cpp  ImagesTests.cpp  PhysicsSimulation.cpp  PhysicsTests.cpp
MyRPGGame/tests/src/: GenerateImgTest.cpp  GoogleTestSample.cpp  NavigateFilesTest.cpp  OpenCVTests.cpp
MyRPGGame/vulkan/: CMakeLists.txt
MyRPGGame/vulkan/include/: Device.hpp  ShadersHelper.hpp  Validation.hpp  Window.hpp
MyRPGGame/vulkan/src/: Device.cpp  ShadersHelper.cpp  Validation.cpp  Window.cpp  main.cpp
RPGGameDB/: RPGGameDB.publish.xml  RPGGameDB.sqlproj
RpgAPI/: Program.cs  RpgAPI.csproj  appsettings.Development.json
RpgAPI/Data Access/: RPGGameDBContext.cs
RpgAPI/EntitiesValidation/: GameEntitiesValidation.cs
RpgAPI/Enums/: EnemyType.cs  PlayerType.cs
RpgAPI/Migrations/: 20220709094828_InitialMigration.Designer.cs  20220709094828_InitialMigration.cs  20220716152227_InitialAPIDB.Designer.cs  20220716152227_InitialAPIDB.cs  RPGGameDBContextModelSnapshot.cs
RpgAPI/Models/: GameEntity.cs  GameMap.cs  NPCEnemy.cs  Player.cs
RpgAPI/Profiles/: GameEntitiesProfile.cs
RpgAPI/Properties/: launchSettings.json
RpgAPI/Repository/: GameEntitiesRepo.cs  IGameEntitiesRepo.cs
dockerfiles/: Dockerfile  linux.Dockerfile  windows.Dockerfile
graphics/maps/: Ground.tsx  Tiny.tsx  map_1_1.tmx
pipelines/: Jenkinsfile
(+55 files in other folders)
